робота із стилями

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,11 @@
 body{
     font-family: 'Roboto';
     color: #000000
+    
 }
-
+.link{
+    text-decoration: none;
+}
 
 .link{
         font-family: 'Raleway';
@@ -10,7 +13,7 @@ body{
         font-size: 26px;
         line-height: 1.2;
         letter-spacing: 0.03em;
-        color: #2196F3;
+              
    }
    
 .list{
@@ -20,13 +23,17 @@ body{
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-}
-
-.list:hover{
-color: #2196F3;
+    
 }
 
 
+.nav-list{
+         font-weight: 500;
+        font-size: 14px;
+        line-height: 16px;
+        letter-spacing: 0.02em;
+        color: #212121;
+}
 
 
 .mail{
