--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
     --title-backround-color:#2f303a;
     --button-backround-color:#2196f3;
     --accent-lin-color:#2196F3;
+  
 }
 
 body{
@@ -18,10 +19,19 @@ body{
 }
 .link-logo{
     font-family: 'Raleway';
-    color: var(--logo-color);
-     text-decoration: none;
-
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    text-decoration: none;
+    color: var(--accent-lin-color);
 }
+.port{
+        color: var(--logo-color);
+}
+
+
+
 
 
 .heder{
@@ -65,7 +75,7 @@ body{
     color: var(--accent-lin-color)
 
 }
-.list.link-list.current{
+.link-list.current{
     color: var(--accent-lin-color);
 }
 
@@ -139,9 +149,12 @@ body{
     left: 692px;
     top: 430px;
 
-    background: #2196F3;
+    background: var(--button-backround-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+
+
+
 
 }
 .list-button{
@@ -156,14 +169,8 @@ color: var(--prinory-text-color);
 .list-button:hover,
 .list-button:focus {
     color: var(--tetriory-color);
-    background: #2196F3;
+    background: var(--button-backround-color);
 }
-
-
-
-
-
-
 
 .list-title{
      font-weight: 700;
@@ -200,8 +207,6 @@ color: var(--prinory-text-color);
 }
     
 
-
-
 .list-comanda{
 font-weight: 500; 
  font-size: 16px;
@@ -229,12 +234,25 @@ color: var(--prinory-text-color);
         font-size: 14px;
         line-height: 1.7;
         letter-spacing: 0.03em;
-      
+        color: var(--tetriory-color);
 }
 footer{ 
     width: 1600px;
     height: 252px;
-    color: var(--tetriory-color);
     background-color: var(--title-backround-color);
-  
+    color: var(--tetriory-color);
+}
+.port-footer{
+    color: var(--tetriory-color);
+}
+
+
+
+.adress-link{
+        text-decoration: none;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 24px;
+        letter-spacing: 0.03em;
+        color: rgba(255, 255, 255, 0.6);
 }
